@@ -2488,6 +2488,372 @@ name|indexDir
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testParentOrdinal
+specifier|public
+name|void
+name|testParentOrdinal
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// LUCENE-4913: root ordinal was always 0 when all children were requested
+name|Directory
+name|indexDir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|Directory
+name|taxoDir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|TaxonomyWriter
+name|taxonomyWriter
+init|=
+operator|new
+name|DirectoryTaxonomyWriter
+argument_list|(
+name|taxoDir
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|indexDir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|FacetFields
+name|facetFields
+init|=
+operator|new
+name|FacetFields
+argument_list|(
+name|taxonomyWriter
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|facetFields
+operator|.
+name|addFields
+argument_list|(
+name|doc
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|CategoryPath
+argument_list|(
+literal|"a/1"
+argument_list|,
+literal|'/'
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|taxonomyWriter
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|DirectoryReader
+name|r
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|indexDir
+argument_list|)
+decl_stmt|;
+name|DirectoryTaxonomyReader
+name|taxo
+init|=
+operator|new
+name|DirectoryTaxonomyReader
+argument_list|(
+name|taxoDir
+argument_list|)
+decl_stmt|;
+comment|// assert IntFacetResultHandler
+name|FacetSearchParams
+name|fsp
+init|=
+operator|new
+name|FacetSearchParams
+argument_list|(
+operator|new
+name|CountFacetRequest
+argument_list|(
+operator|new
+name|CategoryPath
+argument_list|(
+literal|"a"
+argument_list|)
+argument_list|,
+literal|10
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|FacetsAccumulator
+name|fa
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+operator|new
+name|FacetsAccumulator
+argument_list|(
+name|fsp
+argument_list|,
+name|r
+argument_list|,
+name|taxo
+argument_list|)
+else|:
+operator|new
+name|StandardFacetsAccumulator
+argument_list|(
+name|fsp
+argument_list|,
+name|r
+argument_list|,
+name|taxo
+argument_list|)
+decl_stmt|;
+name|FacetsCollector
+name|fc
+init|=
+name|FacetsCollector
+operator|.
+name|create
+argument_list|(
+name|fa
+argument_list|)
+decl_stmt|;
+operator|new
+name|IndexSearcher
+argument_list|(
+name|r
+argument_list|)
+operator|.
+name|search
+argument_list|(
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+argument_list|,
+name|fc
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"invalid ordinal for child node: 0"
+argument_list|,
+literal|0
+operator|!=
+name|fc
+operator|.
+name|getFacetResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getFacetResultNode
+argument_list|()
+operator|.
+name|subResults
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|ordinal
+argument_list|)
+expr_stmt|;
+comment|// assert IntFacetResultHandler
+name|fsp
+operator|=
+operator|new
+name|FacetSearchParams
+argument_list|(
+operator|new
+name|SumScoreFacetRequest
+argument_list|(
+operator|new
+name|CategoryPath
+argument_list|(
+literal|"a"
+argument_list|)
+argument_list|,
+literal|10
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|fa
+operator|=
+operator|new
+name|FacetsAccumulator
+argument_list|(
+name|fsp
+argument_list|,
+name|r
+argument_list|,
+name|taxo
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|FacetsAggregator
+name|getAggregator
+parameter_list|()
+block|{
+return|return
+operator|new
+name|SumScoreFacetsAggregator
+argument_list|()
+return|;
+block|}
+block|}
+expr_stmt|;
+block|}
+else|else
+block|{
+name|fa
+operator|=
+operator|new
+name|StandardFacetsAccumulator
+argument_list|(
+name|fsp
+argument_list|,
+name|r
+argument_list|,
+name|taxo
+argument_list|)
+expr_stmt|;
+block|}
+name|fc
+operator|=
+name|FacetsCollector
+operator|.
+name|create
+argument_list|(
+name|fa
+argument_list|)
+expr_stmt|;
+operator|new
+name|IndexSearcher
+argument_list|(
+name|r
+argument_list|)
+operator|.
+name|search
+argument_list|(
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+argument_list|,
+name|fc
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"invalid ordinal for child node: 0"
+argument_list|,
+literal|0
+operator|!=
+name|fc
+operator|.
+name|getFacetResults
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getFacetResultNode
+argument_list|()
+operator|.
+name|subResults
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|ordinal
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|taxo
+argument_list|,
+name|taxoDir
+argument_list|,
+name|r
+argument_list|,
+name|indexDir
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
